[metadata]
name = netR
version = 0.0.1
author = Net Dash
author_email = admin@falcontech.ca
description = The customizable HTTP web framework for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Net-Dash/netR
project_urls =
    Bug Tracker = https://github.com/Net-Dash/netR/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
